--- a/Http/인터넷통신.md
+++ b/Http/인터넷통신.md
@@ -1,6 +1,6 @@
 # **인터넷 통신**
 
 ## **인터넷에서 컴퓨터 둘은 어떻게 통신할까?**
-만약 클라이언트와 서버가 케이블로 연결되어 있다면 서로 어렵지 않게 통신을 할 수 있다. 하지만 클라이언트와 서버가 서로 먼 거리에 있다면 다음 사진과 같이 **노드** 라는 중간 서버를 거쳐 통신을 해야 한다. 그렇다면 그 통신은 대체 어떤 통신, 규칙으로 넘어가게 되는걸까? 그것에 대해서는 [IP(인터넷 프로토콜)]() 을 학습해야 한다.
+만약 클라이언트와 서버가 케이블로 연결되어 있다면 서로 어렵지 않게 통신을 할 수 있다. 하지만 클라이언트와 서버가 서로 먼 거리에 있다면 다음 사진과 같이 **노드** 라는 중간 서버를 거쳐 통신을 해야 한다. 그렇다면 그 통신은 대체 어떤 통신, 규칙으로 넘어가게 되는걸까? 그것에 대해서는 [IP(인터넷 프로토콜)](https://github.com/uuuuuuuk/Real_NEW_IL/blob/main/Http/IP(%EC%9D%B8%ED%84%B0%EB%84%B7%20%ED%94%84%EB%A1%9C%ED%86%A0%EC%BD%9C).md) 을 학습해야 한다.
 
 ![untitle](/img/internet.png)
