--- a/I don't know Spring/s3 이미지 업로드 오류.md
+++ b/I don't know Spring/s3 이미지 업로드 오류.md
@@ -7,3 +7,21 @@ com.amazonaws.services.s3.model.AmazonS3Exception: The specified bucket is not v
 ```
 
 라는 오류가 발생했다. 해당 오류를 검색해보니 aws에서 잘못된 버킷 이름을 설정했을때 일어나는 오류라고 했다ㅠㅠㅠㅠ 내가 개발하면서 가장 오랫동안 해결하지 못한 오류인데 추후에 해결하면 다시 수정해야겠다..
+
+++
+
+오류(?)를 알아냈다ㅠㅠㅠㅠ
+
+사실 오류가 아니라 내가 환경변수 불러오는걸 잘못했던 것이었다.........
+
+![untitle](/img/babo1.png)
+
+에서
+
+![untitle](/img/babo2.png)
+
+로 고쳐줬다...
+
+<br>
+
+죄송합니다
